# Image-Processing

./: .gitignore  CMakeLists.txt  ImgProc.hpp  ImgProcConfig.cmake  LICENSE  README.md  README_zh.md  imgProcess.hpp  index.md  package-lock.json  package.json
.github/workflows/: deploy.yml
.vitepress/: config.mjs
include/: ImgProc.h
pages/: Channel.md  GrayImage.md  Matrix.md  OutlineRenderer.md  RGBImage.md  RGBTRIPLE.md  ShapeType.md  functions.md  intro.md  setup.md  startup.md
src/: ImgProc.cpp
